--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,113 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="#D7EBEA"
+    tools:context=".MainActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+    <com.ssomai.android.scalablelayout.ScalableLayout
+        android:id="@+id/scalableLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="10dp"
-        android:paddingLeft="10dp"
-        android:paddingEnd="10dp"
-        android:paddingRight="10dp"
-        android:layout_alignParentTop="true"
-        android:layout_weight="0"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:titleTextColor="#000000" />
+        app:scale_base_height="200"
+        app:scale_base_width="1220">
+
+        <EditText
+            android:id="@+id/searchBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/around"
+            android:hint="검색어 입력"
+            android:imeOptions="actionDone"
+            android:inputType="text"
+            android:paddingStart="45dp"
+
+            app:scale_height="170"
+            app:scale_left="30"
+            app:scale_textsize="50"
+            app:scale_top="30"
+            app:scale_width="1175" />
+
+        <ImageButton
+            android:id="@+id/back_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/back_"
+            android:onClick="back"
+            app:scale_height="130"
+            app:scale_left="50"
+            app:scale_textsize="40"
+            app:scale_top="58"
+            app:scale_width="100" />
+
+
+        <ImageButton
+            android:id="@+id/clearB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/cross_icon"
+            android:backgroundTint="#d3d3d3"
+            app:scale_height="90"
+            app:scale_left="900"
+            app:scale_top="85"
+            app:scale_width="90" />
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="0.3dp"
+            android:background="#d3d3d3"
+            app:scale_height="70"
+            app:scale_left="1010"
+            app:scale_top="85"
+            app:scale_width="5" />
+
+        <ImageButton
+            android:id="@+id/search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/search_icon1"
+            android:text="Button"
+            app:scale_height="120"
+            app:scale_left="1040"
+            app:scale_top="70"
+            app:scale_width="100" />
+    </com.ssomai.android.scalablelayout.ScalableLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
-        android:padding="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/frameLayout3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar">
-
-        <com.ssomai.android.scalablelayout.ScalableLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:background="@drawable/white_background_round"
-            android:elevation="5dp"
-            android:padding="5dp"
-            app:scale_base_height="110"
-            app:scale_base_width="350">
-
-            <TextView
-                android:id="@+id/label_SeeCategory"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="start|center_vertical"
-                android:text="주제별 보기"
-                android:textColor="@android:color/black"
-
-                android:textStyle="bold"
-                app:scale_height="30"
-                app:scale_left="10"
-                app:scale_textsize="15"
-                app:scale_top="10"
-                app:scale_width="320" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@android:color/darker_gray"
-                app:scale_height="3"
-                app:scale_left="10"
-                app:scale_top="45"
-                app:scale_width="320" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView_category"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:clickable="true"
-                android:gravity="center"
-                android:orientation="horizontal"
-                app:scale_height="40"
-                app:scale_left="10"
-                app:scale_textsize="14"
-                app:scale_top="55"
-                app:scale_width="320"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
-
-
-
-
-        </com.ssomai.android.scalablelayout.ScalableLayout>
+        app:layout_constraintTop_toBottomOf="@+id/scalableLayout"
+        tools:layout_editor_absoluteY="72dp">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+            android:id="@+id/wordRe"
+            android:layout_width="383dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="-3dp"
+            android:background="@drawable/recy"
+            android:orientation="vertical"
+            android:visibility="gone"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constrainedHeight="true"
+            tools:listitem="@layout/item" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:clickable="true"
-            android:gravity="center"
-            android:orientation="vertical"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+            android:visibility="gone" />
+
 
     </LinearLayout>
-
     <FrameLayout
-        android:id="@+id/frameLayout3"
+        android:id="@+id/frame_bottombar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
-
 
         <com.ssomai.android.scalablelayout.ScalableLayout
             android:layout_width="match_parent"
@@ -164,7 +175,7 @@
                 app:scale_width="100"
                 app:srcCompat="@drawable/info_lined" />
         </com.ssomai.android.scalablelayout.ScalableLayout>
-    </FrameLayout>
 
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
