--- a/app/src/main/res/layout/activity_word_more.xml
+++ b/app/src/main/res/layout/activity_word_more.xml
@@ -3,13 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingStart="10dp"
+        android:paddingLeft="10dp"
+        android:paddingEnd="10dp"
+        android:paddingRight="10dp"
         android:layout_alignParentTop="true"
         android:layout_weight="0"
         android:background="?attr/colorPrimary"
@@ -24,16 +28,15 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_margin="2dp"
+
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="15dp"
         app:cardElevation="2dp"
-        app:cardUseCompatPadding="true">>
+        app:cardUseCompatPadding="true">
 
         <com.ssomai.android.scalablelayout.ScalableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             app:scale_base_height="80"
             app:scale_base_width="100">
 
@@ -56,8 +59,6 @@
                 android:layout_height="wrap_content"
                 android:text="설명"
                 android:textColor="#97000000"
-                android:maxLines="1"
-                android:ellipsize="end"
                 app:scale_height="12"
                 app:scale_left="4"
                 app:scale_textsize="5"
@@ -68,69 +69,78 @@
                 app:textview_wrapcontent_resizesurrounded="true"
                 tools:ignore="MissingPrefix" />
 
-            <Button
-                android:id="@+id/more"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                app:scale_height="12"
-                app:scale_left="7"
-                app:scale_textsize="5"
-                app:scale_top="50"
-                app:scale_width="86"
-                android:text="더보기" />
-
         </com.ssomai.android.scalablelayout.ScalableLayout>
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_margin="2dp"
-        app:cardBackgroundColor="#FFFFFF"
-        app:cardCornerRadius="15dp"
-        app:cardElevation="2dp"
-        app:cardUseCompatPadding="true">>
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
+
+    <FrameLayout
+        android:id="@+id/frame_bottombar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <com.ssomai.android.scalablelayout.ScalableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/darker_gray_background"
+            app:scale_base_height="60"
+            app:scale_base_width="400">
 
-            app:scale_base_height="50"
-            app:scale_base_width="100">
-
-            <TextView
-                android:id="@+id/news"
+            <ImageButton
+                android:id="@+id/bottombar_home"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="관련기사"
-                android:textColor="#000000"
-                app:scale_height="12"
-                app:scale_left="4"
-                app:scale_textsize="7"
-                app:scale_top="3"
-                app:scale_width="90"
-                tools:ignore="MissingPrefix" />
+                android:layout_height="match_parent"
+                android:background="#f8f8f8"
+                android:clickable="true"
+                app:scale_height="59"
+                app:scale_left="0"
+                app:scale_top="1"
+                app:scale_width="100"
+                app:srcCompat="@drawable/home_lined" />
 
-            <TextView
-                android:id="@+id/news2"
+            <ImageButton
+                android:id="@+id/bottombar_bookmark"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="내용"
-                android:textColor="#97000000"
-                android:maxLines="1"
-                android:ellipsize="end"
-                app:scale_height="12"
-                app:scale_left="4"
-                app:scale_textsize="5"
-                app:scale_top="16"
-                app:scale_width="86"
-                app:textview_wrapcontent_direction="bottom"
-                app:textview_wrapcontent_movesiblings="true"
-                app:textview_wrapcontent_resizesurrounded="true"
-                tools:ignore="MissingPrefix" />
+                android:layout_height="match_parent"
+                android:background="#f8f8f8"
+                android:clickable="true"
+                app:scale_height="59"
+                app:scale_left="100"
+                app:scale_top="1"
+                app:scale_width="100"
+                app:srcCompat="@drawable/bookmark_lined" />
 
+            <ImageButton
+                android:id="@+id/bottombar_mypage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#f8f8f8"
+                android:clickable="true"
+                app:scale_height="59"
+                app:scale_left="200"
+                app:scale_top="1"
+                app:scale_width="100"
+                app:srcCompat="@drawable/mypage_lined" />
 
+            <ImageButton
+                android:id="@+id/bottombar_info"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#f8f8f8"
+                android:clickable="true"
+                app:scale_height="59"
+                app:scale_left="300"
+                app:scale_top="1"
+                app:scale_width="100"
+                app:srcCompat="@drawable/info_lined" />
         </com.ssomai.android.scalablelayout.ScalableLayout>
-    </androidx.cardview.widget.CardView>
+
+    </FrameLayout>
 </LinearLayout>
