--- a/app/src/main/res/layout/item_after_search.xml
+++ b/app/src/main/res/layout/item_after_search.xml
@@ -4,41 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_weight="0"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:titleTextColor="#000000" />
+    android:background="#D7EBEA"
+    >
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="240dp"
         android:layout_margin="2dp"
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="15dp"
         app:cardElevation="2dp"
-        app:cardUseCompatPadding="true">>
+        app:cardUseCompatPadding="true">
 
         <com.ssomai.android.scalablelayout.ScalableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            app:scale_base_height="80"
+            app:scale_base_height="63"
             app:scale_base_width="100">
 
             <TextView
-                android:id="@+id/wn"
+                android:id="@+id/wna"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="단어"
@@ -51,11 +37,13 @@
                 tools:ignore="MissingPrefix" />
 
             <TextView
-                android:id="@+id/wm"
+                android:id="@+id/wme"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="설명"
                 android:textColor="#97000000"
+                android:maxLines="2"
+                android:ellipsize="end"
                 app:scale_height="12"
                 app:scale_left="4"
                 app:scale_textsize="5"
@@ -68,4 +56,5 @@
 
         </com.ssomai.android.scalablelayout.ScalableLayout>
     </androidx.cardview.widget.CardView>
+
 </LinearLayout>
