--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,7 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">#B0D8D7</item>
         <item name="colorPrimaryDark">#B0D8D7</item>
-        <item name="colorAccent">#B0D8D7</item>
+        <item name="colorAccent">@color/orange_point</item>
         <!-- Customize your theme here. -->
 
 
