--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -97,7 +97,7 @@
         <com.ssomai.android.scalablelayout.ScalableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:scale_base_height="110"
+            app:scale_base_height="120"
             app:scale_base_width="400">
 
             <com.ssomai.android.scalablelayout.ScalableLayout
@@ -105,9 +105,9 @@
                 android:layout_height="match_parent"
                 android:background="@drawable/white_background_round"
                 android:elevation="5dp"
-                app:scale_base_height="100"
+                app:scale_base_height="110"
                 app:scale_base_width="390"
-                app:scale_height="100"
+                app:scale_height="110"
                 app:scale_left="5"
                 app:scale_top="5"
                 app:scale_width="390">
@@ -133,7 +133,7 @@
                     android:background="@android:color/darker_gray"
                     app:scale_height="2"
                     app:scale_left="10"
-                    app:scale_top="49"
+                    app:scale_top="54"
                     app:scale_width="380" />
 
                 <TextView
@@ -147,7 +147,7 @@
                     app:scale_height="40"
                     app:scale_left="10"
                     app:scale_textsize="20"
-                    app:scale_top="55"
+                    app:scale_top="65"
                     app:scale_width="100" />
 
                 <Switch
@@ -158,9 +158,9 @@
                     android:clickable="true"
                     android:switchMinWidth="60dp"
                     app:scale_height="40"
-                    app:scale_left="300"
-                    app:scale_top="55"
-                    app:scale_width="80" />
+                    app:scale_left="310"
+                    app:scale_top="65"
+                    app:scale_width="70" />
 
             </com.ssomai.android.scalablelayout.ScalableLayout>
         </com.ssomai.android.scalablelayout.ScalableLayout>
@@ -228,15 +228,15 @@
         <com.ssomai.android.scalablelayout.ScalableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/darker_gray_background"
             app:scale_base_height="60"
-            app:scale_base_width="400">
+            app:scale_base_width="400"
+            android:background="@drawable/darker_gray_background">
 
             <ImageButton
                 android:id="@+id/bottombar_home"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#f8f8f8"
+                android:background="@color/mere_white"
                 android:clickable="true"
                 app:scale_height="59"
                 app:scale_left="0"
@@ -248,7 +248,7 @@
                 android:id="@+id/bottombar_bookmark"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#f8f8f8"
+                android:background="@color/mere_white"
                 android:clickable="true"
                 app:scale_height="59"
                 app:scale_left="100"
@@ -260,7 +260,7 @@
                 android:id="@+id/bottombar_mypage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#f8f8f8"
+                android:background="@color/mere_white"
                 android:clickable="true"
                 app:scale_height="59"
                 app:scale_left="200"
@@ -272,7 +272,7 @@
                 android:id="@+id/bottombar_info"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#f8f8f8"
+                android:background="@color/mere_white"
                 android:clickable="true"
                 app:scale_height="59"
                 app:scale_left="300"
