--- a/app/src/main/res/drawable/darker_gray_background.xml
+++ b/app/src/main/res/drawable/darker_gray_background.xml
@@ -1,9 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:top="1dp">
-    <shape android:shape="rectangle">
-        <solid android:color="#707070" />
+<item
+    android:bottom="0dp"
+    android:left="0dp"
+    android:right="0dp"
+    android:top="0dp">
+    <shape android:shape="rectangle" >
+        <stroke
+            android:width="1dp"
+            android:color="@color/darker_gray2" />
+
+        <solid android:color="#FFFFFF" />
     </shape>
 </item>
 
